<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10sdp"
    android:background="@color/white"
    android:orientation="vertical"
    >

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/pick_or_take_a_selfie"
      android:textColor="@color/dark_gray"
      android:textSize="16sp"
      style="@style/SemiBoldFont"
      />

  <TextView
      android:id="@+id/tvCamera"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_10sdp"
      android:padding="@dimen/_10sdp"
      android:text="@string/camera"
      android:textSize="14sp"
      android:textColor="@color/dark_gray"
      />
  <TextView
      android:id="@+id/tvGallery"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/_10sdp"
      android:text="@string/gallery"
      android:textSize="14sp"
      android:textColor="@color/dark_gray"
      />

</LinearLayout>