<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_login_bg"
    android:orientation="vertical"
    >

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="@dimen/_30sdp"
      android:src="@drawable/ic_insider_login"
      />


  <TextView
      android:id="@+id/tvError"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="@dimen/_10sdp"
      android:text="@string/login_error"
      android:textColor="@color/yellow"
      android:visibility="invisible"
      />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginLeft="@dimen/_25sdp"
      android:layout_marginRight="@dimen/_25sdp"
      android:layout_weight="1"
      android:orientation="vertical"
      >
    <LinearLayout
        android:id="@+id/linearEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:orientation="vertical"
        >
      <EditText
          android:id="@+id/etEmail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/_30sdp"
          android:background="@null"
          android:drawableLeft="@drawable/ic_email"
          android:drawablePadding="@dimen/_10sdp"
          android:hint="@string/email"
          android:inputType="textEmailAddress"
          android:maxLines="1"
          android:textSize="15sp"
          android:paddingBottom="@dimen/_15sdp"
          android:textColor="@color/white"
          android:textColorHint="@color/white"
          />

      <View

          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/white"
          />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:orientation="vertical"
        >
      <EditText
          android:id="@+id/etPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/_15sdp"
          android:background="@null"
          android:drawableLeft="@drawable/ic_password"
          android:drawablePadding="@dimen/_10sdp"
          android:hint="@string/password"
          android:inputType="textPassword"
          android:maxLines="1"
          android:textSize="15sp"
          android:paddingBottom="@dimen/_15sdp"
          android:textColor="@color/white"
          android:textColorHint="@color/white"
          />

      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/white"
          />
    </LinearLayout>
    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@color/blue_indicator"
        android:text="@string/sign_in"
        style="@style/SemiBoldFont"
        android:textAllCaps="false"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/violet"
        android:text="@string/sign_in_with_facebook"
        android:textAllCaps="false"
        style="@style/SemiBoldFont"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/tvForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="@string/forgot_your_password"
        android:textColor="@color/orange"
        />

  </LinearLayout>
  <LinearLayout
      android:id="@+id/linearSignUp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/_10sdp"
      android:gravity="bottom|center_horizontal"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingTop="@dimen/_5sdp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        />
    <Space
        android:layout_width="@dimen/_5sdp"
        android:layout_height="@dimen/_5sdp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingRight="@dimen/_5sdp"
        android:paddingTop="@dimen/_5sdp"
        android:text="@string/sign_up"
        android:textColor="@color/blue_indicator"
        />
  </LinearLayout>
</LinearLayout>