<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white"
  android:orientation="vertical">

  <include layout="@layout/title_header" />

  <android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        style="@style/SemiBoldFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/section"
        android:padding="@dimen/_8sdp"
        android:text="@string/change_password"
        android:textColor="@color/dark_gray" />

      <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="@dimen/_10sdp">


          <TextView
            android:id="@+id/tvFirstName"
            style="@style/SemiBoldFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_password"
            android:textColor="@color/dark_gray" />

          <EditText
            android:id="@+id/etOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvFirstName"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@null"
            android:hint="Your old password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/light_gray"
            android:textSize="12sp" />

          <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_right_arrow_gray" />
        </RelativeLayout>

        <View
          android:layout_width="match_parent"
          android:layout_height="1px"
          android:background="@color/divider" />
      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="@dimen/_10sdp">

          <TextView
            android:id="@+id/tvNewPassword"
            style="@style/SemiBoldFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textColor="@color/dark_gray" />

          <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvNewPassword"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@null"
            android:hint="@string/your_new_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/light_gray"
            android:textSize="12sp" />

          <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_right_arrow_gray" />
        </RelativeLayout>

        <View
          android:layout_width="match_parent"
          android:layout_height="1px"
          android:background="@color/divider" />
      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
          android:id="@+id/rlPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="@dimen/_10sdp">

          <TextView
            android:id="@+id/tvPassword"
            style="@style/SemiBoldFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textColor="@color/dark_gray" />

          <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPassword"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@null"
            android:hint="@string/your_confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/light_gray"
            android:textSize="12sp" />

          <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_right_arrow_gray" />
        </RelativeLayout>

        <View
          android:layout_width="match_parent"
          android:layout_height="1px"
          android:background="@color/divider" />


      </LinearLayout>

      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center_horizontal">

        <Button
          android:id="@+id/btnUpdatePassword"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@color/colorPrimary"
          android:paddingLeft="@dimen/_12sdp"
          android:paddingRight="@dimen/_12sdp"
          android:text="@string/update_password"
          android:textColor="@color/white" />

      </LinearLayout>
    </LinearLayout>
  </android.support.v4.widget.NestedScrollView>
</LinearLayout>
