<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:padding="@dimen/_10sdp"
    >

  <ImageView
      android:id="@+id/imgMedal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:src="@drawable/ic_achievement_green"
      />
  <LinearLayout

      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/_10sdp"
      android:layout_marginRight="@dimen/_5sdp"
      android:layout_toLeftOf="@+id/tvRedeem"
      android:layout_toRightOf="@id/imgMedal"
      android:orientation="vertical"
      >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selfie_up"
        android:textColor="@color/dark_gray"
        android:textSize="13sp"
        style="@style/SemiBoldFont"
        />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/selfie_text"
        android:maxLines="2"
        android:ellipsize="end"
        android:textColor="@color/dark_gray"
        android:textSize="12sp"
        />
  </LinearLayout>

  <TextView
      android:id="@+id/tvRewardPoints"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
      android:drawableLeft="@drawable/ic_points"
      android:drawablePadding="@dimen/_5sdp"
      android:textColor="@color/dark_gray"
      android:textSize="12sp"
      tools:text="30 pts"
      style="@style/BoldFont"
      />

  <TextView
      android:id="@+id/tvRedeem"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
      android:layout_below="@id/tvRewardPoints"
      android:layout_marginTop="@dimen/_10sdp"
      android:background="@drawable/blue_border"
      android:ems="5"
      android:gravity="center"
      android:padding="@dimen/_5sdp"
      android:text="@string/redeem"
      android:textColor="@color/blue_indicator"
      android:textSize="12sp"
      />

</RelativeLayout>