<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@color/comment_black"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:orientation="vertical"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_70sdp"
        android:gravity="center"
        android:text="@string/congratulations_card"
        android:textColor="@color/white"
        android:textSize="22sp"
        style="@style/BoldFont"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center_vertical"
        >
      <com.topcoder.timobile.customviews.roundimageview.RoundedImageView
          android:id="@+id/imgCardFirst"
          android:layout_width="80dp"
          android:layout_height="140dp"
          android:layout_weight="1"

          android:src="@drawable/ic_story_ph"
          app:riv_border_color="@color/card_border"
          app:riv_border_width="@dimen/_2sdp"
          app:riv_corner_radius="@dimen/_3sdp"
          />

      <com.topcoder.timobile.customviews.roundimageview.RoundedImageView
          android:id="@+id/imgCardSecond"
          android:layout_width="80dp"
          android:layout_height="140dp"
          android:layout_weight="1"
          android:src="@drawable/ic_story_ph"
          app:riv_border_color="@color/card_border"
          app:riv_border_width="@dimen/_2sdp"
          app:riv_corner_radius="@dimen/_3sdp"
          />


      <com.topcoder.timobile.customviews.roundimageview.RoundedImageView
          android:id="@+id/imgCardThree"
          android:layout_width="80dp"
          android:layout_height="140dp"
          android:layout_weight="1"
          android:src="@drawable/ic_story_ph"
          app:riv_border_color="@color/card_border"
          app:riv_border_width="@dimen/_2sdp"
          app:riv_corner_radius="@dimen/_3sdp"
          />


    </LinearLayout>

    <TextView
        android:id="@+id/tvMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_35sdp"
        android:gravity="center"
        android:lineSpacingExtra="8dp"
        android:text="@string/reward_card"
        android:textColor="@color/white"
        android:textSize="12sp"
        />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/_10sdp"
      android:layout_marginLeft="@dimen/_10sdp"
      android:layout_marginRight="@dimen/_10sdp"
      android:gravity="bottom"
      >
    <Button
        android:id="@+id/btnBackStory"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_weight="1"
        android:background="@color/disable_color"
        android:text="@string/back_to_story"
        android:textColor="@color/white"
        />
    <Button
        android:id="@+id/btnMainMenu"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_weight="1"
        android:background="@color/blue_indicator"
        android:text="@string/main_menu"
        android:textColor="@color/white"
        />
  </LinearLayout>
</LinearLayout>